--- a/main.css
+++ b/main.css
@@ -1,30 +1,37 @@
 * {
-    margin: 0;
-    padding: 0;
-    width: 100%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0e;
+  font-size: 100%;
+  vertical-align: baseline;
 }
-
 
 h1 {
-    font-size: 30px;
-    text-align: center;
+  width: 550px;
+  font-size: 30px;
+  text-align: center;
 }
 
-
 .drop_down {
-    width: 50%;
-    border: 1px solid rgb(197, 195, 195);
-    border-radius: 10px;
-    margin: 50px auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
+  width: 600px;
+  border: 1px solid rgb(197, 195, 195);
+  border-radius: 10px;
+  margin: 50px auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .drop_down img {
+  width: 30px;
+  height: 30px;
+}
 
-    width: 30px;
-    height: 30px;
-    padding-right: 20px;
+.dictionary {
+    padding: 0 10%;
+}
+
+ul li {
+    margin-bottom: 20px;
 }
